feat: first pass at a pattern

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,5 +3,6 @@
 /scripts/ @Azure/bicep-admins @Azure/avm-core-team-technical-bicep
 /avm/ @Azure/avm-core-team-technical-bicep
 /avm/utilities/ @Azure/avm-core-team-technical-bicep
+/avm/ptn/container-registry/landingzone @Azure/avm-ptn-containerregistry-landingzone-module-owners-bicep @Azure/avm-core-team-technical-bice
 /avm/res/dashboard/grafana/ @Azure/avm-res-dashboard-grafana-module-owners-bicep @Azure/avm-core-team-technical-bicep
 *avm.core.team.tests.ps1 @Azure/avm-core-team-technical-bicep
