--- a/.github/actions/templates/avm-setEnvironment/action.yml
+++ b/.github/actions/templates/avm-setEnvironment/action.yml
@@ -3,7 +3,11 @@
 #########################################################
 ##
 ## This composite action contains the logic to install any required asset on the runner.
-##
+## And contains the logic to read a YAML file containing a list (dictionary) of key-value pairs and convert each key as an environment variable.
+## Example YAML File content:
+## listName:
+##  key1: 'value1'
+##  key2: 'value2'##
 #########################################################
 ##
 ##-------------------------------------------##
@@ -14,6 +18,7 @@
 ##   | Parameter          | Required | Default | Description                                                                              | Example                     |
 ##   |--------------------|----------|---------|------------------------------------------------------------------------------------------|-----------------------------|
 ##   | removeDeployment   | true     | ''      | Set "true" to setup runner with PowerShell modules needed for custom resource removal    | 'truel'                     |
+##   | variablesPath      | true     | ''      | The path to the YAML file that contains the key value pairs for environment variables    | './settings.yml'    |
 ##   |==================================================================================================================================================================|
 ##
 ##---------------------------------------------##
@@ -22,6 +27,9 @@ name: "Set environment"
 description: "Set environment"
 
 inputs:
+  variablesPath:
+    description: 'The path to the YAML file that contains the key value pairs for environment variables'
+    required: true
   removeDeployment:
     description: 'Set "true" to setup runner with PowerShell modules needed for custom resource removal'
     default: "true"
