feat: fixing private publish (#13)
* feat: adding flows for private registry

* fix: add settings yml, expect this is be rolled back

* fix: remove the variables settings

* test: direct to publish

* fix: workflow name

* fix: helper folder path

* fix: module to publish - publish latest removed

* fix: path var

* fix: parent path

* test: update modules to publish logic

--- a/.github/actions/templates/hub-publishModule/action.yml
+++ b/.github/actions/templates/hub-publishModule/action.yml
@@ -112,7 +112,7 @@ runs:
 
           # Load used functions
           # . (Join-Path $env:GITHUB_WORKSPACE 'utilities' 'pipelines' 'resourcePublish' 'Get-ModulesToPublish.ps1')
-          . (Join-Path $env:GITHUB_WORKSPACE 'avm' 'utilities' 'pipelines'  'publish' 'Get-ModulesToPublish.ps1')
+          . (Join-Path $env:GITHUB_WORKSPACE 'avm' 'utilities' 'pipelines'  'publish' 'helper' 'Get-ModulesToPublish.ps1')
           # . (Join-Path $env:GITHUB_WORKSPACE 'utilities' 'pipelines' 'resourcePublish' 'Get-ModulesMissingFromTemplateSpecsRG.ps1')
           . (Join-Path $env:GITHUB_WORKSPACE 'avm' 'utilities' 'pipelines'  'publish' 'Get-ModulesMissingFromTemplateSpecsRG.ps1')
           # . (Join-Path $env:GITHUB_WORKSPACE 'utilities' 'pipelines' 'resourcePublish' 'Publish-ModuleToTemplateSpecsRG.ps1')
@@ -124,8 +124,8 @@ runs:
           ##   Get modules to publish   ##
           ################################
           $functionInput = @{
-            TemplateFilePath = Join-Path $env:GITHUB_WORKSPACE "${{ inputs.templateFilePath }}"
-            PublishLatest    = [System.Convert]::ToBoolean("${{ inputs.publishLatest }}")
+            ModuleFolderPath = Split-Path (Join-Path $env:GITHUB_WORKSPACE "${{ inputs.templateFilePath }}") -Parent
+            # PublishLatest    = [System.Convert]::ToBoolean("${{ inputs.publishLatest }}")
           }
 
           Write-Verbose "Invoke task with" -Verbose
@@ -203,7 +203,7 @@ runs:
 
           # Load used functions
           # . (Join-Path $env:GITHUB_WORKSPACE 'utilities' 'pipelines' 'resourcePublish' 'Get-ModulesToPublish.ps1')
-          . (Join-Path $env:GITHUB_WORKSPACE 'avm' 'utilities' 'pipelines'  'publish' 'Get-ModulesToPublish.ps1')
+          . (Join-Path $env:GITHUB_WORKSPACE 'avm' 'utilities' 'pipelines'  'publish' 'helper' 'Get-ModulesToPublish.ps1')
           # . (Join-Path $env:GITHUB_WORKSPACE 'utilities' 'pipelines' 'resourcePublish' 'Get-ModulesMissingFromPrivateBicepRegistry.ps1')
           . (Join-Path $env:GITHUB_WORKSPACE 'avm' 'utilities' 'pipelines'  'publish' 'Get-ModulesMissingFromPrivateBicepRegistry.ps1')
           # . (Join-Path $env:GITHUB_WORKSPACE 'utilities' 'pipelines' 'resourcePublish' 'Publish-ModuleToPrivateBicepRegistry.ps1')
@@ -215,8 +215,8 @@ runs:
           ##   Get modules to publish   ##
           ################################
           $functionInput = @{
-            TemplateFilePath = Join-Path $env:GITHUB_WORKSPACE "${{ inputs.templateFilePath }}"
-            PublishLatest    = [System.Convert]::ToBoolean("${{ inputs.publishLatest }}")
+            ModuleFolderPath = Split-Path (Join-Path $env:GITHUB_WORKSPACE "${{ inputs.templateFilePath }}") -Parent
+            # PublishLatest    = [System.Convert]::ToBoolean("${{ inputs.publishLatest }}")
           }
 
           Write-Verbose "Invoke task with" -Verbose
