fix: template specs

--- a/.github/workflows/avm.template.module.yml
+++ b/.github/workflows/avm.template.module.yml
@@ -25,7 +25,6 @@ env:
   ARM_MGMTGROUP_ID: "${{ secrets.ARM_MGMTGROUP_ID }}"
   ARM_TENANT_ID: "${{ secrets.ARM_TENANT_ID }}"
   TOKEN_NAMEPREFIX: "${{ secrets.TOKEN_NAMEPREFIX }}"
-  variablesPath: "settings.yml"
 
 jobs:
   #########################
@@ -155,8 +154,6 @@ jobs:
           fetch-depth: 0
       - name: Set environment
         uses: ./.github/actions/templates/avm-setEnvironment
-        with:
-          variablesPath: ${{ env.variablesPath }}
       - name: "Publishing"
         uses: ./.github/actions/templates/hub-publishModule
         with:
@@ -164,7 +161,7 @@ jobs:
           subscriptionId: "${{ secrets.PUBLISH_SUBSCRIPTION_ID }}"
           templateSpecsRGName: "p-we1iac-registry"
           templateSpecsRGLocation: "westeurope"
-          templateSpecsDescription: "${{ env.templateSpecsDescription }}"
+          templateSpecsDescription: "components"
           templateSpecsDoPublish: "true"
           bicepRegistryName: "${{ secrets.PUBLISH_REGISTRY_SERVER }}"
           bicepRegistryRGName: "p-we1iac-registry"
