feat: Feat private publish (#16)
* feat: adding flows for private registry

* fix: add settings yml, expect this is be rolled back

* fix: remove the variables settings

* test: direct to publish

* fix: workflow name

* fix: helper folder path

* fix: module to publish - publish latest removed

* fix: path var

* fix: parent path

* test: update modules to publish logic

* fix: template specs

* fix: remove the testing harness

* fix: delete testing files

* fix: missing template spec

--- a/.github/actions/templates/hub-publishModule/action.yml
+++ b/.github/actions/templates/hub-publishModule/action.yml
@@ -136,6 +136,7 @@ runs:
           #############################
 
           # Add all modules that don't exist in the target location
+              # TemplateFilePath    = Join-Path $env:GITHUB_WORKSPACE "${{ inputs.templateFilePath }}"
           $missingInputObject = @{
               TemplateFilePath    = Split-Path (Join-Path $env:GITHUB_WORKSPACE "${{ inputs.templateFilePath }}") -Parent
               TemplateSpecsRGName = '${{ inputs.templateSpecsRgName }}'
