--- a/.github/actions/templates/hub-publishModule/action.yml
+++ b/.github/actions/templates/hub-publishModule/action.yml
@@ -226,7 +226,7 @@ runs:
           # Add all modules that don't exist in the target location
           $missingInputObject = @{
               TemplateFilePath    = Join-Path $env:GITHUB_WORKSPACE "${{ inputs.templateFilePath }}"
-              BicepRegistryName   = '${{ inputs.bicepRegistryName }}'
+              BicepRegistryName   = '${{ env.PUBLISH_REGISTRY_SERVER }}'
               BicepRegistryRgName = '${{ inputs.bicepRegistryRgName }}'
               PublishLatest       = [System.Convert]::ToBoolean("${{ inputs.publishLatest }}")
           }
@@ -258,7 +258,7 @@ runs:
 
             $functionInput = @{
               TemplateFilePath        = $moduleToPublish.TemplateFilePath
-              BicepRegistryName       = '${{ inputs.bicepRegistryName }}'
+              BicepRegistryName       = '${{ env.PUBLISH_REGISTRY_SERVER }}'
               BicepRegistryRgName     = '${{ inputs.bicepRegistryRgName }}'
               BicepRegistryRgLocation = '${{ inputs.bicepRegistryRgLocation }}'
               ModuleVersion           = $moduleToPublish.Version
