--- a/.github/workflows/avm.template.module.yml
+++ b/.github/workflows/avm.template.module.yml
@@ -159,11 +159,11 @@ jobs:
         with:
           templateFilePath: "${{ inputs.modulePath }}/main.bicep"
           subscriptionId: "${{ secrets.PUBLISH_SUBSCRIPTION_ID }}"
-          templateSpecsRGName: "p-we1iac-registry"
+          templateSpecsRGName: "p-we1iac-specs"
           templateSpecsRGLocation: "westeurope"
           templateSpecsDescription: "components"
           templateSpecsDoPublish: "true"
-          bicepRegistryName: "${{ secrets.PUBLISH_REGISTRY_SERVER }}"
+          bicepRegistryName: "pwe1iacregistry"
           bicepRegistryRGName: "p-we1iac-registry"
           bicepRegistryRgLocation: "westeurope"
           bicepRegistryDoPublish: "true"
