--- a/bicepconfig.json
+++ b/bicepconfig.json
@@ -2,6 +2,9 @@
 // For example which linter warnings to display, or which external source (e.g. Template Specs / Bicep Container Registry) to make available as a short reference
 // For further information, please refer to the official documentation at: https://learn.microsoft.com/en-us/azure/azure-resource-manager/bicep/bicep-config
 {
+  "experimentalFeaturesEnabled": {
+    "publishSource": true
+  },
   "analyzers": {
     "core": {
       "rules": {
