fix: publishing flow

--- a/.github/workflows/avm.template.module.yml
+++ b/.github/workflows/avm.template.module.yml
@@ -161,14 +161,14 @@ jobs:
           subscriptionId: "${{ secrets.PUBLISH_SUBSCRIPTION_ID }}"
           templateSpecsRGName: "p-we1iac-specs"
           templateSpecsRGLocation: "westeurope"
-          templateSpecsDescription: "components"
-          templateSpecsDoPublish: "true"
-          bicepRegistryName: "pwe1iacregistry"
-          bicepRegistryRGName: "p-we1iac-registry"
-          bicepRegistryRgLocation: "westeurope"
-          bicepRegistryDoPublish: "true"
-          publishLatest: "true"
-          useApiSpecsAlignedName: "false"
+          # templateSpecsDescription: "components"
+          # templateSpecsDoPublish: "true"
+          # bicepRegistryName: "pwe1iacregistry"
+          # bicepRegistryRGName: "p-we1iac-registry"
+          # bicepRegistryRgLocation: "westeurope"
+          # bicepRegistryDoPublish: "true"
+          # publishLatest: "true"
+          # useApiSpecsAlignedName: "false"
         env:
           PUBLISH_REGISTRY_SERVER: "${{ secrets.PUBLISH_REGISTRY_SERVER }}"
           PUBLISH_CLIENT_ID: "${{ secrets.PUBLISH_CLIENT_ID }}"
