--- a/.github/ISSUE_TEMPLATE/avm_module_issue.yml
+++ b/.github/ISSUE_TEMPLATE/avm_module_issue.yml
@@ -40,6 +40,7 @@ body:
         - ""
         - "avm/ptn/lz/container-registry"
         - "avm/res/dashboard/grafana"
+        - "/avm/res/security-insights/alert-rules"
     validations:
       required: true
   - type: input
