--- a/.github/workflows/avm.res.security-insights.alert-rules.yml
+++ b/.github/workflows/avm.res.security-insights.alert-rules.yml
@@ -1,4 +1,4 @@
-name: "avm.res.app.job"
+name: "avm.res.security-insights.alert-rules"
 
 on:
   schedule:
@@ -30,15 +30,15 @@ on:
     paths:
       - ".github/actions/templates/avm-**"
       - ".github/workflows/avm.template.module.yml"
-      - ".github/workflows/avm.res.app.job.yml"
-      - "avm/res/app/job/**"
+      - ".github/workflows/avm.res.security-insights.alert-rules.yml"
+      - "avm/res/security-insights/alert-rules/**"
       - "avm/utilities/pipelines/**"
       - "!avm/utilities/pipelines/platform/**"
       - "!*/**/README.md"
 
 env:
-  modulePath: "avm/res/app/job"
-  workflowPath: ".github/workflows/avm.res.app.job.yml"
+  modulePath: "avm/res/security-insights/alert-rules"
+  workflowPath: ".github/workflows/avm.res.security-insights.alert-rules.yml"
 
 concurrency:
   group: ${{ github.workflow }}
