feat: lz spoke scaffold

--- a/.github/ISSUE_TEMPLATE/avm_module_issue.yml
+++ b/.github/ISSUE_TEMPLATE/avm_module_issue.yml
@@ -39,6 +39,7 @@ body:
       options:
         - ""
         - "avm/ptn/lz/container-registry"
+        - "avm/ptn/lz/spoke"
         - "avm/res/custom-providers/resource-providers"
         - "avm/res/dashboard/grafana"
         - "avm/res/security-insights/alert-rules"
