--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,10 +1,11 @@
 * @Azure/bicep-admins @Azure/avm-core-team-technical-bicep
+*avm.core.team.tests.ps1 @Azure/avm-core-team-technical-bicep
 /.github/ @Azure/bicep-admins @Azure/avm-core-team-technical-bicep
-/scripts/ @Azure/bicep-admins @Azure/avm-core-team-technical-bicep
 /avm/ @Azure/avm-core-team-technical-bicep
-/avm/utilities/ @Azure/avm-core-team-technical-bicep
 /avm/ptn/lz/container-registry/ @Azure/avm-ptn-lz-containerregistry-module-owners-bicep @Azure/avm-core-team-technical-bicep
+/avm/ptn/lz/spoke @Azure/avm-ptn-lz-spoke-module-owners-bicep @Azure/avm-core-team-technical-bicep
 /avm/res/custom-providers/resource-providers/ @Azure/avm-res-customproviders-resourceproviders-module-owners-bicep @Azure/avm-core-team-technical-bicep
 /avm/res/dashboard/grafana/ @Azure/avm-res-dashboard-grafana-module-owners-bicep @Azure/avm-core-team-technical-bicep
 /avm/res/security-insights/alert-rules/ @Azure/avm-res-securityinsights-alertrules-module-owners-bicep @Azure/avm-core-team-technical-bicep
-*avm.core.team.tests.ps1 @Azure/avm-core-team-technical-bicep
+/avm/utilities/ @Azure/avm-core-team-technical-bicep
+/scripts/ @Azure/bicep-admins @Azure/avm-core-team-technical-bicep
