feat: Azure Custom Resource provider custom-provider.resource-provider (#40)
* feat: adding new custom rp code

* fix: restore pipeline structure

* feat: lz spoke scaffold (#41)

--- a/.github/ISSUE_TEMPLATE/avm_module_issue.yml
+++ b/.github/ISSUE_TEMPLATE/avm_module_issue.yml
@@ -39,8 +39,10 @@ body:
       options:
         - ""
         - "avm/ptn/lz/container-registry"
+        - "avm/ptn/lz/spoke"
+        - "avm/res/custom-providers/resource-providers"
         - "avm/res/dashboard/grafana"
-        - "/avm/res/security-insights/alert-rules"
+        - "avm/res/security-insights/alert-rules"
     validations:
       required: true
   - type: input
