--- a/bicepconfig.json
+++ b/bicepconfig.json
@@ -3,7 +3,8 @@
 // For further information, please refer to the official documentation at: https://learn.microsoft.com/en-us/azure/azure-resource-manager/bicep/bicep-config
 {
   "experimentalFeaturesEnabled": {
-    "publishSource": true
+    "publishSource": true,
+    "extensibility": true
   },
   "analyzers": {
     "core": {
