--- a/.github/ISSUE_TEMPLATE/avm_module_issue.yml
+++ b/.github/ISSUE_TEMPLATE/avm_module_issue.yml
@@ -40,6 +40,7 @@ body:
         - ""
         - "avm/ptn/lz/container-registry"
         - "avm/ptn/lz/spoke"
+        - "avm/ptn/management/cortex"
         - "avm/res/custom-providers/resource-providers"
         - "avm/res/dashboard/grafana"
         - "avm/res/security-insights/alert-rules"
