--- a/.github/workflows/platform.sync-avm-modules-list.yml
+++ b/.github/workflows/platform.sync-avm-modules-list.yml
@@ -19,8 +19,8 @@ jobs:
       - uses: tibdex/github-app-token@v2
         id: generate-token
         with:
-          app_id: ${{ secrets.TEAM_LINTER_APP_ID }}
-          private_key: ${{ secrets.TEAM_LINTER_PRIVATE_KEY }}
+          app_id: ${{ secrets.BOT_APP_ID }}
+          private_key: ${{ secrets.BOT_APP_PRIVATE_KEY }}
       - name: sync avm modules list
         shell: pwsh
         env:
