docs: adding the bootstrap

--- a/.github/ISSUE_TEMPLATE/avm_module_issue.yml
+++ b/.github/ISSUE_TEMPLATE/avm_module_issue.yml
@@ -2,7 +2,7 @@ name: AVM - Module Issue ➕🐛🔒
 description: Want to request a new Module feature or report a bug? Let us know!
 title: "[AVM Module Issue]: "
 labels: ["Type: AVM :a: :v: :m:", "Needs: Triage :mag:"]
-projects: ["Azure/566"]
+projects: ["Innofactororg/1"]
 body:
   - type: markdown
     attributes:
